opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/tilde_f"
bug-reports: "https://github.com/janestreet/tilde_f/issues"
dev-repo: "git+https://github.com/janestreet/tilde_f.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/tilde_f/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Provides a let-syntax for continuation-passing style."
description: "
Provides a let-syntax for continuation-passing style.
"
